--- a/index.html
+++ b/index.html
@@ -72,9 +72,29 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque recusandae ea voluptate voluptatibus dignissimos praesentium impedit, nemo deleniti et ipsa sequi libero tenetur molestias illum animi vel quae expedita saepe?
                     </p>
+
+                    <h2>Introduction</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque recusandae ea voluptate voluptatibus dignissimos praesentium impedit, nemo deleniti et ipsa sequi libero tenetur molestias illum animi vel quae expedita saepe?
                     </p>
+
+                    <ul>
+                        <li><a href="#">Introduction</a></li>
+                        <li><a href="#">Getting Started</a></li>
+                        <li><a href="#">Implementing</a></li>
+                        <li><a href="#">Building</a></li>
+                        <li><a href="#">Conclusion</a></li>
+                    </ul>
+
+
+                    <img src="https://cdn.scotch.io/1/lbpFyaWRvCH4O0qfETkQ_build-a-mini-netflix-with-react.png.jpg" alt="article image">
+
+                    <h3>Smaller Section</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque recusandae ea voluptate voluptatibus dignissimos praesentium impedit, nemo deleniti et ipsa sequi libero tenetur molestias illum animi vel quae expedita saepe?
+                    </p>
+                    <pre><code>int main(void){ <br>     int i = 6; <br>} <br>
+                        </code></pre>
                 </div>
             </div>
 
