--- a/index.html
+++ b/index.html
@@ -52,19 +52,31 @@
             <div class="article__inner">
                 <!-- SIDEBAR -->
                 <aside class="sidebar">
-                    <!-- TABLE OF CONTENTS -->
-                    <ul class="table-of-contents">
-                        <li><a href="#">Introduction</a></li>
-                        <li><a href="#">Getting Started</a></li>
-                        <li><a href="#">Implementing</a></li>
-                        <li><a href="#">Building</a></li>
-                        <li><a href="#">Conclusion</a></li>
-                    </ul>
+                    <h3>&lt;UL&gt; of Contents</h3>
 
-                    <!-- SIDEBAR ADS -->
-                    <div class="ad">
-                        <img src="http://placekitten.com/g/300/250" alt="">
+                    <div class="sidebar__box">
+                        <!-- TABLE OF CONTENTS -->
+                        <ul class="table-of-contents">
+                            <li><a href="#">Introduction</a></li>
+                            <li><a href="#">Getting Started</a></li>
+                            <li><a href="#">Implementing</a></li>
+                            <li><a href="#">Building</a></li>
+                            <li><a href="#">Conclusion</a></li>
+                        </ul>
                     </div>
+
+                    <div class="sidebar__box">
+                        <!-- SIDEBAR ADS -->
+                        <div class="ad">
+                            <img src="http://placekitten.com/g/300/250" alt="">
+                        </div>
+                    </div>
+
+                    <div class="sidebar__box share-buttons">
+                        <a href="#" class="share-button background-twitter">Twitter</a>
+                        <a href="#" class="share-button background-facebook">Facebook</a>
+                    </div>
+
                 </aside>
 
                 <!-- BODY -->
